# aerodefences-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  DEMO.md  Dockerfile  PLAN.md  PRODUCTION.md  PROMPT_BOOK.md  README.md  REFACTOR_PLAN.md  SUBMISSION.md  ad_config.py  ad_db.py  ad_metrics.py  ad_prompts.py  ad_repositories.py  ad_resources.py  ad_security.py  ad_tools_rag.py  ad_tools_read.py  ad_tools_write.py  architecture.drawio  client_aerodefences.py  context_scenario_aerodefences.md  docker-compose.yml  pyproject.toml  rag_index.py  repl_aerodefences.py  server_aerodefences.py
.github/workflows/: ci.yml
db/: init.sql
docs/: architecture.mmd
docs/verification/: pytest.txt  transcript.txt  verify_http_auth.py
knowledge/: compliance-policy.md  glossary.md  ordering-and-lead-time.md  synonyms.md
tests/: conftest.py  test_server.py
